Improving the French Headers.tex documentation

--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -396,7 +396,7 @@
 \end{justify}\setlength{\parskip}{1em}
 
 \begin{justify}
-    \textbf{\color{brick}Sinon, si} une valeur est passée au paramètre \textbf{\color{orange}p\_bgColorPos} lors de l'appel de la fonction, \textbf{\color{brick}alors} :\par
+    \textbf{\color{brick}Sinon, si} une valeur est passée au paramètre \textbf{\color{orange}p\_bgColorPos} lors de l'appel de la fonction, \textbf{\color{brick}alors} :
 \end{justify}
 
 \begin{itemize}
@@ -423,7 +423,7 @@
                         \begin{justify}
                             \textbf{\color{brick}Si} l'un des chiffres de ce nombre à trois chiffres est égal à \textbf{1}, \textbf{\color{brick}alors} la fonction \textbf{\color{mauve}BU::DechoBGColor} est appelée pour colorier le fond de la zone de texte où la première ligne de caractères est affichée.
                         \end{justify}\setlength{\parskip}{1em}
-                        
+
                         \begin{justify}
                             \textbf{\color{brick}Sinon, si} l'un des chiffres de ce nombre à trois chiffres est égal à \textbf{2}, \textbf{\color{brick}alors} la fonction \textbf{\color{mauve}BU::DechoBGColor} est appelée pour colorier le fond de la zone de texte où la chaîne de caractères principale est affichée.
                         \end{justify}\setlength{\parskip}{1em}
@@ -431,7 +431,7 @@
                         \begin{justify}
                             \textbf{\color{brick}Sinon, si} l'un des chiffres de ce nombre à trois chiffres est égal à \textbf{3}, \textbf{\color{brick}alors} la fonction \textbf{\color{mauve}BU::DechoBGColor} est appelée pour coloriee le fond de la zone de texte où la seconde ligne de caractères est affichée.
                         \end{justify}\setlength{\parskip}{1em}
-                        
+
                         \begin{justify}
                             \textbf{\color{brick}Sinon, si} l'un des chiffres de ce nombre à trois chiffres n'est pas égal à l'une des trois valeurs attendues, \textbf{\color{brick}Sinon, si} un message d'avertissement est affiché sur la zone de texte.
                         \end{justify}\setlength{\parskip}{1em}
@@ -461,7 +461,7 @@
             \begin{justify}
                 \textbf{\color{brick}Sinon, si} une valeur inattendue est passée à ce paramètre, \textbf{\color{brick}alors} un message d'avertissement est affiché sur la zone de texte.
             \end{justify}
-            
+
             \begin{justify}
                 \textbf{\color{brick}Fin de la condition}.
             \end{justify}
@@ -560,12 +560,14 @@
 \end{justify}
 
 \begin{justify}
+    Chaque fonction porte le nom de la couleur à afficher sur chaque ligne, puis le nom de la couleur à appliquer au texte.
+\end{justify}
+
+\begin{justify}
     Elles fonctionnent chacune de la même manière que les fonctions de la catégorie précédente, à deux exceptions près :
 
     \begin{itemize}
-        \item \textbf{le nom :} chaque fonction porte le nom de la couleur à afficher sur chaque ligne, puis le nom de la couleur à appliquer au texte.\setlength{\parskip}{1em}
-
-        \item \textbf{le nom (bis) :} Il n'y a pas de fonction portant deux fois le nom de la même couleur, car le rendu serait le même que celui des fonctions de la catégorie précédente.
+        \item \textbf{le nom des fonctions et des variables :} Il n'y a pas de fonction portant deux fois le nom de la même couleur, ni d'appels double des mêmes variables, car le résultat et le rendu seraient le même que celui des fonctions de la sous-catégorie précédente.\setlength{\parskip}{1em}
     \end{itemize}
 \end{justify}
 
